--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,6 +89,13 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('mrt-mobile.keystore')
+            storePassword 'norieljoy'
+            keyAlias 'mrt-mobile'
+            keyPassword 'norieljoy'
+        }
+
     }
     buildTypes {
         debug {
@@ -97,7 +104,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
